# segmentation-playground

./: .gitignore  CONTRIBUTING.md  FUTURE_DIRECTIONS.md  GUI_GUIDE.md  PIPELINE_CONTEXT.md  PIPELINE_HISTORY.md  README.md  ab_fallback.py  ab_seed.py  ab_tier2_wide.py  batch.py  calibration.py  coprop_lab.py  copy_gt_masks_local.ps1  datatest.ipynb  diag_utils.py  extract_frames.py  gui.py  gui_neuron.py  lucinda_catmaid.py  make_deck_figures.ipynb  pipeline.py  pull_worm.py  pyproject.toml  requirements.txt  run_aval.py  run_perframe.py  single_object_depth_segmentation.py  somethin.txt  sweep_dilation.py  viz_utils.py
.github/workflows/: ci.yml
archive/: README.md
cluster/: exp_neuron_chunks.txt  make_chunks.py  merge_shards.py  run_array.sh  run_eval_array.sh  run_exp.sh  run_merge.sh  run_merge_exp.sh  run_py.sh  stage_download.sh  submit_sam3_round.sh
data/groundtruth/: README.md
docs/: CHANGELOG.md
docs/adr/: 0001-library-plus-thin-drivers.md  0002-serializable-chain-state.md  0003-filesystem-only-no-database.md  0004-sam2-video-propagation-core.md  0005-centralized-coordinate-transforms.md  0006-canonical-mask-space.md  0007-napari-review-gui.md  0008-video-seed-box-vs-mask.md  0009-tier2-crop-fallback.md  0010-erl-voi-eval-ruler.md  0011-flat-layout-over-src.md  0012-node-anchored-multimask-selection.md  0013-pipeline-package-split.md  0014-neuron-level-review-gui.md  0015-target-worm-merge-metric-ruler.md  0016-membrane-map-border-to-border-bleed-detection.md  README.md
docs/explanation/: architecture.md  design-notes.md  perframe-experiments.md  roadmap.md  sam3-bakeoff-findings.md
docs/figures/membrane-v1/: README.md
docs/figures/perframe/: approach1-measures-scores.csv  approach1-vs-approach2-scores.csv
docs/how-to/: add-a-pipeline-phase.md  evaluate-against-gt.md  queued-sam3-narval-tests.md  review-a-neuron.md  review-flagged-chains.md  run-a-batch.md  run-on-narval.md  run-sam3-on-narval.md
docs/reference/: cli.md  code-map.md  configuration.md  coordinate-spaces.md  qc-signals.md  state-and-storage.md
docs/superpowers/: 2026-06-29-multi-instance-coprop-findings.md
docs/superpowers/plans/: 2026-06-23-neuron-review-gui.md  2026-06-26-multi-instance-coprop.md  2026-06-30-coprop-lab.md  2026-07-15-item1-per-slice-reseed.md  2026-07-15-item3-generous-capped-multimask.md  2026-07-15-merge-metric.md  2026-07-17-phase1-blowup-guard-and-genfirst-negcrop.md  2026-07-17-phase2-membrane-map-bleed-detection.md  2026-07-20-perframe-approach2-and-tuner.md  2026-07-20-perframe-foundation-and-approach1.md  2026-07-21-sam3-cluster-whole-set-eval.md  2026-07-21-sam3-pvs-bakeoff.md
docs/superpowers/specs/: 2026-06-22-gui-box-prompts-design.md  2026-06-22-gui-chain-picker-design.md  2026-06-22-tier2-crop-sizing-design.md  2026-06-23-neuron-review-gui-design.md  2026-06-26-multi-instance-coprop-design.md  2026-06-30-coprop-lab-design.md  2026-07-01-narval-parallel-batch-design.md  2026-07-06-fullres-resolution-experiments-design.md  2026-07-07-gui-run-picker-design.md  2026-07-07-mask-seeded-propagation-design.md  2026-07-07-tiled-fullres-propagation-design.md  2026-07-15-phase1-per-slice-reseed-generous-multimask.md  2026-07-17-phase1-blowup-guard-and-genfirst-negcrop-design.md  2026-07-17-phase2-membrane-map-bleed-detection-design.md  2026-07-20-perframe-segmentation-design.md  2026-07-21-sam3-cluster-whole-set-eval-design.md  2026-07-21-sam3-pvs-bakeoff-design.md
docs/tutorials/: getting-started.md
eval/: README.md  __init__.py  concat_merge_shards.py  diag_registration.py  erl.py  groundtruth.py  gt_dataset.py  merge_metric.py  metrics.py  perframe_score.py  predict_gt.py  registration.py  registration_overlay.py  retro_eval.py  run_erl.py  scale_registration.py  score.py  score_batch.py  score_labelmap.py
experiments/: README.md  ab_crop_from_mask.py  ab_eval.py  ab_fallback.py  ab_seed.py  ab_tier2.py  ab_tier2_wide.py  ab_underfill.py  diag_target_registration.py  sam3_bakeoff.py  sam3_overlay_disk.py  sam3_probe.py  sweep_dilation.py
finetune/: README.md  finetune.py
notebooks/: README.md  multi_object_segmentation.ipynb
pipeline/: __init__.py  config.py  crop.py  frames.py  masks.py  orchestrator.py  predict.py  propagate.py  qc.py  state.py
sam2_utils/: README.md  UTILS_README.md  __init__.py  alignment.py  catmaid.py  config.py  diagnostics.py  labels.py  membrane.py  perframe.py  presets.py  qc.py  review.py  review_queue.py  sam3_backend.py  setup.py  skeletons.py  video_viz.py  viz.py
scripts/: pull_worm.py
tests/: test_alignment.py  test_anchor_select.py  test_backend_selection.py  test_blowup_guard.py  test_chain_crop_from_mask.py  test_chain_masks_in_sam.py  test_concat_merge_shards.py  test_coprop_lab.py  test_doctests.py  test_eval_erl.py  test_eval_groundtruth.py  test_eval_metrics.py  test_eval_predict_gt.py  test_eval_registration_overlay.py  test_eval_score_labelmap.py  test_generous_multimask.py  test_gui_box.py  test_gui_coprop_layers.py  test_image_predict_box.py  test_import_direction.py  test_labels.py  test_make_chunks.py  test_membrane_metric.py  test_merge_metric.py  test_multiobj_session.py  test_neighbor_chains.py  test_neuron_crop.py  test_neuron_view.py  test_per_slice_reseed.py  test_perframe.py  test_perframe_objective.py  test_perframe_score.py  test_phase1_closeout_presets.py  test_postprocess_mask.py  test_reasons_for_row.py  test_resolution_experiments.py  test_review_queue.py  test_run_perframe_amg_smoke.py  test_run_perframe_smoke.py  test_run_perframe_tune.py  (+4 more)
