[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "sam2_utils"
version = "0.1.0"
description = "Shared helpers for SAM2 experiments on Zhen Lab EM data."
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "pandas",
    "opencv-python",
    "matplotlib",
    "Pillow",
    "psutil",
    "requests",
    "tqdm",
    # `progressbar2` is optional; setup.py uses a fallback if absent.
    # `torch` is intentionally NOT listed. Install the CUDA build that
    # matches your environment from pytorch.org first.
]

[project.optional-dependencies]
# Everything needed to run the test suite. The suite is CPU-only: it never
# loads a SAM2 checkpoint or touches the GPU, because pipeline imports torch
# lazily. scipy and scikit-image are used by the pipeline-math tests but are
# not part of the runtime-core dependency set above.
test = ["pytest", "scipy", "scikit-image"]
# Contributor toolchain: tests plus the linter/formatter.
dev = ["pytest", "scipy", "scikit-image", "ruff"]

# pipeline.py is a top-level module (flat layout, see ADR 0011), so it must be
# declared explicitly for `pip install -e .` to expose `import pipeline`.
[tool.setuptools]
py-modules = ["pipeline"]

[tool.setuptools.packages.find]
where = ["."]
include = ["sam2_utils*", "eval*"]

[tool.ruff]
line-length = 100
# Notebooks are exploratory (implicit cross-cell state, which the linter cannot
# follow); archive is parked. Neither is linted.
extend-exclude = ["notebooks", "archive"]

[tool.ruff.lint]
# Default rules (pyflakes + a subset of pycodestyle). The compact one-statement
# styles below are intentional in this codebase, so they are not flagged.
ignore = [
    "E701",  # multiple statements on one line (colon)
    "E702",  # multiple statements on one line (semicolon)
    "E741",  # ambiguous variable name (l, I, O) used in math code
    "E731",  # lambda assignment
    "E402",  # module import not at top (scripts do a sys.path bootstrap first)
]

[tool.ruff.lint.per-file-ignores]
# __init__ re-exports look like unused imports; tests and experiments keep
# fixtures and scratch imports that are not all referenced.
"**/__init__.py" = ["F401"]
"tests/*" = ["F401"]
"experiments/*" = ["F401"]

[tool.ruff.lint.pydocstyle]
# The convention for new docstrings. The presence rules (D1xx) are not enabled
# yet to avoid churn; convert docstrings to this style as you touch them.
convention = "numpy"

[tool.pytest.ini_options]
testpaths = ["tests"]
# Put the repo root on sys.path so `import pipeline` and `import eval` resolve
# regardless of how pytest is invoked (they are root-level, not under a package).
pythonpath = ["."]

# Dependency direction (ADR 0001): the library must not import the drivers. This
# is enforced by tests/test_import_direction.py, a static AST check that runs in
# the normal suite (a flat single-file-module layout does not fit import-linter).
